--- a/agora/Base.lproj/Main.storyboard
+++ b/agora/Base.lproj/Main.storyboard
@@ -754,6 +754,9 @@
                                 <color key="backgroundColor" red="0.6996923089" green="0.82642084360000001" blue="0.13195961710000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <fontDescription key="fontDescription" name="CreteRound-Regular" family="Crete Round" pointSize="40"/>
                                 <textInputTraits key="textInputTraits"/>
+                                <connections>
+                                    <action selector="returnClick:" destination="zQb-XP-iUd" eventType="editingDidEndOnExit" id="OVU-hK-dBk"/>
+                                </connections>
                             </textField>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Digite o tema:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JWt-Wb-3sl">
                                 <rect key="frame" x="119" y="247" width="136" height="29"/>
@@ -763,12 +766,15 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="tema" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Cpd-Oo-dYU">
-                                <rect key="frame" x="0.0" y="284" width="375" height="99"/>
+                                <rect key="frame" x="0.0" y="286" width="375" height="99"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" red="0.6996923089" green="0.82642084360000001" blue="0.13195961710000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" name="CreteRound-Regular" family="Crete Round" pointSize="40"/>
                                 <textInputTraits key="textInputTraits"/>
+                                <connections>
+                                    <action selector="returnClick:" destination="zQb-XP-iUd" eventType="editingDidEndOnExit" id="hNI-Vv-KRg"/>
+                                </connections>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="smt-Y9-iqj">
                                 <rect key="frame" x="0.0" y="579" width="375" height="89"/>
@@ -789,12 +795,17 @@
                                 <state key="normal" title="CRIAR">
                                     <color key="titleColor" red="0.99215686274509807" green="0.96078431372549022" blue="0.84705882352941175" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 </state>
+                                <connections>
+                                    <action selector="createRoomClick:" destination="zQb-XP-iUd" eventType="touchUpInside" id="van-id-FXE"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" red="0.99607843137254903" green="0.96078431372549022" blue="0.84705882352941175" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <viewLayoutGuide key="safeArea" id="sTV-B2-y8g"/>
                     </view>
                     <connections>
+                        <outlet property="nameField" destination="uDm-98-OVy" id="WGr-sx-poI"/>
+                        <outlet property="themeField" destination="Cpd-Oo-dYU" id="kiM-z1-vwp"/>
                         <segue destination="KfK-GD-cRI" kind="showDetail" identifier="getcodesegue" id="vWE-pe-9JX"/>
                     </connections>
                 </viewController>
